Changes in Lab 0 and 1

--- a/content/lab_0/lab-0.ipynb
+++ b/content/lab_0/lab-0.ipynb
@@ -595,7 +595,7 @@
       "source": [
         "# Save your API token to track your progress\n",
         "\n",
-        "%set_env QXToken=dd09c743e72e1633aec323b72778479cb981b9737dd12001db3dff4f86f6141dfb5052b7a86a6b7d0757752d89e75fce2723cbc40517e6cf7b13f856a3255709\n",
+        "%set_env QXToken=\n",
         "\n",
         "# Make sure there is no space between the equal sign\n",
         "# and the beginning of your token"
