--- a/content/lab_1/lab-1.ipynb
+++ b/content/lab_1/lab-1.ipynb
@@ -211,7 +211,7 @@
       "source": [
         "### Save API Token, if needed\n",
         "\n",
-        "%set_env QXToken=dd09c743e72e1633aec323b72778479cb981b9737dd12001db3dff4f86f6141dfb5052b7a86a6b7d0757752d89e75fce2723cbc40517e6cf7b13f856a3255709\n",
+        "%set_env QXToken=\n",
         "\n",
         "# Make sure there is no space between the equal sign\n",
         "# and the beginning of your token"
@@ -1455,7 +1455,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.1.-1"
     }
   },
   "nbformat": 4,
